src/fr/ubordeaux/arduinoCode/Parser.output
Terminaux inutilisés dans la grammaire

    "double"
    "else"
    "foreach"
    "if"
    "in"
    "long"


Grammaire

    0 $accept: program $end

    1 program: list_of_definitions "begin" list_of_stms "end"

    2 list_of_definitions: %empty
    3                    | list_of_definitions definition

    4 list_of_stms: stm
    5             | list_of_stms stm

    6 definition: var_definition
    7           | type_definition
    8           | function_decl
    9           | procedure_decl
   10           | function_definition
   11           | procedure_definition

   12 var_definition: list_of_identifiers ':' type ';'

   13 list_of_identifiers: IDENTIFIER
   14                    | list_of_identifiers ',' IDENTIFIER

   15 type_definition: IDENTIFIER '=' type ';'

   16 function_decl: "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'

   17 procedure_decl: "procedure" IDENTIFIER '(' list_of_parameters ')' ';'

   18 $@1: %empty

   19 function_definition: "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

   20 $@2: %empty

   21 procedure_definition: "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

   22 list_of_parameters: parameter
   23                   | list_of_parameters ',' parameter

   24 parameter: IDENTIFIER ':' type

   25 block: list_of_stms

   26 type: "boolean"
   27     | number
   28     | "string" '[' INTEGER ']'
   29     | "range" "of" type
   30     | "set" "of" type
   31     | "list" "of" type
   32     | "enum" '(' list_of_identifiers ')'
   33     | "struct" '{' list_of_fields '}'

   34 list_of_fields: field
   35               | list_of_fields field

   36 field: IDENTIFIER ':' type ';'

   37 number: "byte"
   38       | "pin"
   39       | "unsigned" "byte"
   40       | "short"
   41       | "unsigned" "short"
   42       | "integer"
   43       | "unsigned" "integer"
   44       | "float"

   45 stm: left_part "++" ';'
   46    | left_part "--" ';'
   47    | left_part '=' expression ';'
   48    | left_part "+=" expression ';'
   49    | left_part "-=" expression ';'
   50    | left_part "*=" expression ';'
   51    | left_part "/=" expression ';'
   52    | left_part "%=" expression ';'
   53    | left_part "&=" expression ';'
   54    | left_part "|=" expression ';'
   55    | left_part "&&=" expression ';'
   56    | left_part "||=" expression ';'
   57    | ATmega328p_procedure
   58    | "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | "do" stm "while" '(' expression ')' ';'
   60    | "loop" stm
   61    | "break" ';'
   62    | "continue" ';'
   63    | "return" expression ';'
   64    | '{' list_of_stms '}'

   65 list_of_case_stms: case_stm
   66                  | list_of_case_stms case_stm

   67 case_stm: "case" expression ':' stm

   68 left_part: IDENTIFIER
   69          | IDENTIFIER '[' expression ']'

   70 expression: constant_expression
   71           | left_part
   72           | IDENTIFIER '(' list_of_expressions ')'
   73           | '[' list_of_expressions ']'
   74           | '{' list_of_expressions '}'
   75           | '[' expression ".." expression ']'
   76           | expression '+' expression
   77           | expression '*' expression
   78           | expression '-' expression
   79           | expression '/' expression
   80           | expression '%' expression
   81           | '-' expression
   82           | expression "++"
   83           | expression "--"
   84           | "++" expression
   85           | "--" expression
   86           | expression '<' expression
   87           | expression "<=" expression
   88           | expression '>' expression
   89           | expression ">=" expression
   90           | expression "==" expression
   91           | expression "!=" expression
   92           | expression "<<" expression
   93           | expression ">>" expression
   94           | expression '&' expression
   95           | expression '|' expression
   96           | expression "&&" expression
   97           | expression "||" expression
   98           | '!' expression
   99           | '(' expression ')'
  100           | ATmega328p_expression

  101 list_of_expressions: expression
  102                    | list_of_expressions ',' expression

  103 constant_expression: "TRUE"
  104                    | "FALSE"
  105                    | PIN
  106                    | HEXA
  107                    | BINAIRE
  108                    | INTEGER
  109                    | FLOAT
  110                    | STRING

  111 ATmega328p_procedure: "pinMode" '(' expression ',' expression ')' ';'
  112                     | "digitalWrite" '(' expression ',' expression ')' ';'
  113                     | "analogReference" '(' expression ')' ';'
  114                     | "analogWrite" '(' expression ',' expression ')' ';'
  115                     | "peek" '(' ')' ';'
  116                     | "flush" '(' ')' ';'
  117                     | "putc" '(' expression ')' ';'
  118                     | "puts" '(' expression ')' ';'
  119                     | "delay_s" '(' expression ')' ';'
  120                     | "delay_ms" '(' expression ')' ';'

  121 ATmega328p_expression: "LOW"
  122                      | "HIGH"
  123                      | "INPUT"
  124                      | "INPUTPULLUP"
  125                      | "OUTPUT"
  126                      | "digitalRead" '(' expression ')'
  127                      | "analogRead" '(' expression ')'
  128                      | "getc" '(' ')'
  129                      | "available" '(' ')'


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' <Token> (33) 98
    '%' <Token> (37) 80
    '&' <Token> (38) 94
    '(' (40) 16 17 19 21 32 58 59 72 99 111 112 113 114 115 116 117 118 119 120 126 127 128 129
    ')' (41) 16 17 19 21 32 58 59 72 99 111 112 113 114 115 116 117 118 119 120 126 127 128 129
    '*' <Token> (42) 77
    '+' <Token> (43) 76
    ',' (44) 14 23 102 111 112 114
    '-' <Token> (45) 78 81
    '/' <Token> (47) 79
    ':' <Token> (58) 12 16 19 24 36 67
    ';' (59) 12 15 16 17 36 45 46 47 48 49 50 51 52 53 54 55 56 59 61 62 63 111 112 113 114 115 116 117 118 119 120
    '<' <Token> (60) 86
    '=' <Token> (61) 15 47
    '>' <Token> (62) 88
    '[' (91) 28 69 73 75
    ']' (93) 28 69 73 75
    '{' (123) 19 21 33 58 64 74
    '|' <Token> (124) 95
    '}' (125) 19 21 33 58 64 74
    error (256)
    "<=" <Token> (258) 87
    ">=" <Token> (259) 89
    "==" <Token> (260) 90
    "!=" <Token> (261) 91
    "<<" <Token> (262) 92
    ">>" <Token> (263) 93
    "&&" <Token> (264) 96
    "||" <Token> (265) 97
    "+=" <Token> (266) 48
    "-=" <Token> (267) 49
    "*=" <Token> (268) 50
    "/=" <Token> (269) 51
    "%=" <Token> (270) 52
    "&=" <Token> (271) 53
    "|=" <Token> (272) 54
    "&&=" <Token> (273) 55
    "||=" <Token> (274) 56
    "++" <Token> (275) 45 82 84
    "--" <Token> (276) 46 83 85
    ".." <Token> (277) 75
    "begin" <Token> (278) 1
    "boolean" <Token> (279) 26
    "break" <Token> (280) 61
    "byte" <Token> (281) 37 39
    "case" <Token> (282) 67
    "continue" <Token> (283) 62
    "do" <Token> (284) 59
    "double" <Token> (285)
    "else" <Token> (286)
    "end" <Token> (287) 1
    "enum" <Token> (288) 32
    "FALSE" <Token> (289) 104
    "float" <Token> (290) 44
    "foreach" <Token> (291)
    "function" <Token> (292) 16 19
    "if" <Token> (293)
    "integer" <Token> (294) 42 43
    "in" <Token> (295)
    "list" <Token> (296) 31
    "long" <Token> (297)
    "loop" <Token> (298) 60
    "of" <Token> (299) 29 30 31
    "procedure" <Token> (300) 17 21
    "range" <Token> (301) 29
    "return" <Token> (302) 63
    "set" <Token> (303) 30
    "short" <Token> (304) 40 41
    "struct" <Token> (305) 33
    "string" <Token> (306) 28
    "switch" <Token> (307) 58
    "TRUE" <Token> (308) 103
    "unsigned" <Token> (309) 39 41 43
    "while" <Token> (310) 59
    "pinMode" <Token> (311) 111
    "digitalWrite" <Token> (312) 112
    "analogReference" <Token> (313) 113
    "analogWrite" <Token> (314) 114
    "digitalRead" <Token> (315) 126
    "analogRead" <Token> (316) 127
    "LOW" <Token> (317) 121
    "HIGH" <Token> (318) 122
    "INPUT" <Token> (319) 123
    "INPUTPULLUP" <Token> (320) 124
    "OUTPUT" <Token> (321) 125
    "pin" <Token> (322) 38
    "getc" <Token> (323) 128
    "available" <Token> (324) 129
    "peek" <Token> (325) 115
    "flush" <Token> (326) 116
    "putc" <Token> (327) 117
    "puts" <Token> (328) 118
    "delay_ms" <Token> (329) 120
    "delay_s" <Token> (330) 119
    HEXA <Integer> (331) 106
    BINAIRE <Integer> (332) 107
    IDENTIFIER <String> (333) 13 14 15 16 17 19 21 24 36 68 69 72
    INTEGER <Long> (334) 28 108
    PIN <Integer> (335) 105
    FLOAT <Float> (336) 109
    STRING <String> (337) 110
    HIGHER_THAN_NOT (338)
    HIGHER_THAN_MINUS (339)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (105)
        à gauche: 0
    program (106)
        à gauche: 1
        à droite: 0
    list_of_definitions (107)
        à gauche: 2 3
        à droite: 1 3
    list_of_stms <List<Stm> > (108)
        à gauche: 4 5
        à droite: 1 5 25 64
    definition (109)
        à gauche: 6 7 8 9 10 11
        à droite: 3
    var_definition (110)
        à gauche: 12
        à droite: 6
    list_of_identifiers <List<String> > (111)
        à gauche: 13 14
        à droite: 12 14 32
    type_definition (112)
        à gauche: 15
        à droite: 7
    function_decl (113)
        à gauche: 16
        à droite: 8
    procedure_decl (114)
        à gauche: 17
        à droite: 9
    function_definition (115)
        à gauche: 19
        à droite: 10
    $@1 (116)
        à gauche: 18
        à droite: 19
    procedure_definition (117)
        à gauche: 21
        à droite: 11
    $@2 (118)
        à gauche: 20
        à droite: 21
    list_of_parameters <List<TypeFIELD> > (119)
        à gauche: 22 23
        à droite: 16 17 19 21 23
    parameter <TypeFIELD> (120)
        à gauche: 24
        à droite: 22 23
    block (121)
        à gauche: 25
        à droite: 19 21
    type <Type> (122)
        à gauche: 26 27 28 29 30 31 32 33
        à droite: 12 15 16 19 24 29 30 31 36
    list_of_fields <List<TypeFIELD> > (123)
        à gauche: 34 35
        à droite: 33 35
    field <TypeFIELD> (124)
        à gauche: 36
        à droite: 34 35
    number <Type> (125)
        à gauche: 37 38 39 40 41 42 43 44
        à droite: 27
    stm <Stm> (126)
        à gauche: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
        à droite: 4 5 59 60 67
    list_of_case_stms <List<StmCASE> > (127)
        à gauche: 65 66
        à droite: 58 66
    case_stm <StmCASE> (128)
        à gauche: 67
        à droite: 65 66
    left_part <Expr> (129)
        à gauche: 68 69
        à droite: 45 46 47 48 49 50 51 52 53 54 55 56 71
    expression <Expr> (130)
        à gauche: 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100
        à droite: 47 48 49 50 51 52 53 54 55 56 58 59 63 67 69 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 101 102 111 112 113 114 117 118 119 120 126 127
    list_of_expressions <List<Expr> > (131)
        à gauche: 101 102
        à droite: 72 73 74 102
    constant_expression <ExprCONSTANT> (132)
        à gauche: 103 104 105 106 107 108 109 110
        à droite: 70
    ATmega328p_procedure <Expr> (133)
        à gauche: 111 112 113 114 115 116 117 118 119 120
        à droite: 57
    ATmega328p_expression <Expr> (134)
        à gauche: 121 122 123 124 125 126 127 128 129
        à droite: 100


État 0

    0 $accept: • program $end
    1 program: • list_of_definitions "begin" list_of_stms "end"
    2 list_of_definitions: • %empty
    3                    | • list_of_definitions definition

    $défaut  réduction par utilisation de la règle 2 (list_of_definitions)

    program              aller à l'état 1
    list_of_definitions  aller à l'état 2


État 1

    0 $accept: program • $end

    $end  décalage et aller à l'état 3


État 2

    1 program: list_of_definitions • "begin" list_of_stms "end"
    3 list_of_definitions: list_of_definitions • definition
    6 definition: • var_definition
    7           | • type_definition
    8           | • function_decl
    9           | • procedure_decl
   10           | • function_definition
   11           | • procedure_definition
   12 var_definition: • list_of_identifiers ':' type ';'
   13 list_of_identifiers: • IDENTIFIER
   14                    | • list_of_identifiers ',' IDENTIFIER
   15 type_definition: • IDENTIFIER '=' type ';'
   16 function_decl: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   17 procedure_decl: • "procedure" IDENTIFIER '(' list_of_parameters ')' ';'
   19 function_definition: • "function" IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'
   21 procedure_definition: • "procedure" IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    "begin"      décalage et aller à l'état 4
    "function"   décalage et aller à l'état 5
    "procedure"  décalage et aller à l'état 6
    IDENTIFIER   décalage et aller à l'état 7

    definition            aller à l'état 8
    var_definition        aller à l'état 9
    list_of_identifiers   aller à l'état 10
    type_definition       aller à l'état 11
    function_decl         aller à l'état 12
    procedure_decl        aller à l'état 13
    function_definition   aller à l'état 14
    procedure_definition  aller à l'état 15


État 3

    0 $accept: program $end •

    $défaut  accepter


État 4

    1 program: list_of_definitions "begin" • list_of_stms "end"
    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  111 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  112                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  113                     | • "analogReference" '(' expression ')' ';'
  114                     | • "analogWrite" '(' expression ',' expression ')' ';'
  115                     | • "peek" '(' ')' ';'
  116                     | • "flush" '(' ')' ';'
  117                     | • "putc" '(' expression ')' ';'
  118                     | • "puts" '(' expression ')' ';'
  119                     | • "delay_s" '(' expression ')' ';'
  120                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "pinMode"          décalage et aller à l'état 22
    "digitalWrite"     décalage et aller à l'état 23
    "analogReference"  décalage et aller à l'état 24
    "analogWrite"      décalage et aller à l'état 25
    "peek"             décalage et aller à l'état 26
    "flush"            décalage et aller à l'état 27
    "putc"             décalage et aller à l'état 28
    "puts"             décalage et aller à l'état 29
    "delay_ms"         décalage et aller à l'état 30
    "delay_s"          décalage et aller à l'état 31
    IDENTIFIER         décalage et aller à l'état 32
    '{'                décalage et aller à l'état 33

    list_of_stms          aller à l'état 34
    stm                   aller à l'état 35
    left_part             aller à l'état 36
    ATmega328p_procedure  aller à l'état 37


État 5

   16 function_decl: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type ';'
   19 function_definition: "function" • IDENTIFIER '(' list_of_parameters ')' ':' type '{' $@1 block '}'

    IDENTIFIER  décalage et aller à l'état 38


État 6

   17 procedure_decl: "procedure" • IDENTIFIER '(' list_of_parameters ')' ';'
   21 procedure_definition: "procedure" • IDENTIFIER '(' list_of_parameters ')' '{' $@2 block '}'

    IDENTIFIER  décalage et aller à l'état 39


État 7

   13 list_of_identifiers: IDENTIFIER •
   15 type_definition: IDENTIFIER • '=' type ';'

    '='  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 13 (list_of_identifiers)


État 8

    3 list_of_definitions: list_of_definitions definition •

    $défaut  réduction par utilisation de la règle 3 (list_of_definitions)


État 9

    6 definition: var_definition •

    $défaut  réduction par utilisation de la règle 6 (definition)


État 10

   12 var_definition: list_of_identifiers • ':' type ';'
   14 list_of_identifiers: list_of_identifiers • ',' IDENTIFIER

    ':'  décalage et aller à l'état 41
    ','  décalage et aller à l'état 42


État 11

    7 definition: type_definition •

    $défaut  réduction par utilisation de la règle 7 (definition)


État 12

    8 definition: function_decl •

    $défaut  réduction par utilisation de la règle 8 (definition)


État 13

    9 definition: procedure_decl •

    $défaut  réduction par utilisation de la règle 9 (definition)


État 14

   10 definition: function_definition •

    $défaut  réduction par utilisation de la règle 10 (definition)


État 15

   11 definition: procedure_definition •

    $défaut  réduction par utilisation de la règle 11 (definition)


État 16

   61 stm: "break" • ';'

    ';'  décalage et aller à l'état 43


État 17

   62 stm: "continue" • ';'

    ';'  décalage et aller à l'état 44


État 18

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   59    | "do" • stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  111 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  112                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  113                     | • "analogReference" '(' expression ')' ';'
  114                     | • "analogWrite" '(' expression ',' expression ')' ';'
  115                     | • "peek" '(' ')' ';'
  116                     | • "flush" '(' ')' ';'
  117                     | • "putc" '(' expression ')' ';'
  118                     | • "puts" '(' expression ')' ';'
  119                     | • "delay_s" '(' expression ')' ';'
  120                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "pinMode"          décalage et aller à l'état 22
    "digitalWrite"     décalage et aller à l'état 23
    "analogReference"  décalage et aller à l'état 24
    "analogWrite"      décalage et aller à l'état 25
    "peek"             décalage et aller à l'état 26
    "flush"            décalage et aller à l'état 27
    "putc"             décalage et aller à l'état 28
    "puts"             décalage et aller à l'état 29
    "delay_ms"         décalage et aller à l'état 30
    "delay_s"          décalage et aller à l'état 31
    IDENTIFIER         décalage et aller à l'état 32
    '{'                décalage et aller à l'état 33

    stm                   aller à l'état 45
    left_part             aller à l'état 36
    ATmega328p_procedure  aller à l'état 37


État 19

   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   60    | "loop" • stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  111 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  112                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  113                     | • "analogReference" '(' expression ')' ';'
  114                     | • "analogWrite" '(' expression ',' expression ')' ';'
  115                     | • "peek" '(' ')' ';'
  116                     | • "flush" '(' ')' ';'
  117                     | • "putc" '(' expression ')' ';'
  118                     | • "puts" '(' expression ')' ';'
  119                     | • "delay_s" '(' expression ')' ';'
  120                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "pinMode"          décalage et aller à l'état 22
    "digitalWrite"     décalage et aller à l'état 23
    "analogReference"  décalage et aller à l'état 24
    "analogWrite"      décalage et aller à l'état 25
    "peek"             décalage et aller à l'état 26
    "flush"            décalage et aller à l'état 27
    "putc"             décalage et aller à l'état 28
    "puts"             décalage et aller à l'état 29
    "delay_ms"         décalage et aller à l'état 30
    "delay_s"          décalage et aller à l'état 31
    IDENTIFIER         décalage et aller à l'état 32
    '{'                décalage et aller à l'état 33

    stm                   aller à l'état 46
    left_part             aller à l'état 36
    ATmega328p_procedure  aller à l'état 37


État 20

   63 stm: "return" • expression ';'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
   70 expression: • constant_expression
   71           | • left_part
   72           | • IDENTIFIER '(' list_of_expressions ')'
   73           | • '[' list_of_expressions ']'
   74           | • '{' list_of_expressions '}'
   75           | • '[' expression ".." expression ']'
   76           | • expression '+' expression
   77           | • expression '*' expression
   78           | • expression '-' expression
   79           | • expression '/' expression
   80           | • expression '%' expression
   81           | • '-' expression
   82           | • expression "++"
   83           | • expression "--"
   84           | • "++" expression
   85           | • "--" expression
   86           | • expression '<' expression
   87           | • expression "<=" expression
   88           | • expression '>' expression
   89           | • expression ">=" expression
   90           | • expression "==" expression
   91           | • expression "!=" expression
   92           | • expression "<<" expression
   93           | • expression ">>" expression
   94           | • expression '&' expression
   95           | • expression '|' expression
   96           | • expression "&&" expression
   97           | • expression "||" expression
   98           | • '!' expression
   99           | • '(' expression ')'
  100           | • ATmega328p_expression
  103 constant_expression: • "TRUE"
  104                    | • "FALSE"
  105                    | • PIN
  106                    | • HEXA
  107                    | • BINAIRE
  108                    | • INTEGER
  109                    | • FLOAT
  110                    | • STRING
  121 ATmega328p_expression: • "LOW"
  122                      | • "HIGH"
  123                      | • "INPUT"
  124                      | • "INPUTPULLUP"
  125                      | • "OUTPUT"
  126                      | • "digitalRead" '(' expression ')'
  127                      | • "analogRead" '(' expression ')'
  128                      | • "getc" '(' ')'
  129                      | • "available" '(' ')'

    '!'            décalage et aller à l'état 47
    '-'            décalage et aller à l'état 48
    "++"           décalage et aller à l'état 49
    "--"           décalage et aller à l'état 50
    "FALSE"        décalage et aller à l'état 51
    "TRUE"         décalage et aller à l'état 52
    "digitalRead"  décalage et aller à l'état 53
    "analogRead"   décalage et aller à l'état 54
    "LOW"          décalage et aller à l'état 55
    "HIGH"         décalage et aller à l'état 56
    "INPUT"        décalage et aller à l'état 57
    "INPUTPULLUP"  décalage et aller à l'état 58
    "OUTPUT"       décalage et aller à l'état 59
    "getc"         décalage et aller à l'état 60
    "available"    décalage et aller à l'état 61
    HEXA           décalage et aller à l'état 62
    BINAIRE        décalage et aller à l'état 63
    IDENTIFIER     décalage et aller à l'état 64
    INTEGER        décalage et aller à l'état 65
    PIN            décalage et aller à l'état 66
    FLOAT          décalage et aller à l'état 67
    STRING         décalage et aller à l'état 68
    '('            décalage et aller à l'état 69
    '{'            décalage et aller à l'état 70
    '['            décalage et aller à l'état 71

    left_part              aller à l'état 72
    expression             aller à l'état 73
    constant_expression    aller à l'état 74
    ATmega328p_expression  aller à l'état 75


État 21

   58 stm: "switch" • '(' expression ')' '{' list_of_case_stms '}'

    '('  décalage et aller à l'état 76


État 22

  111 ATmega328p_procedure: "pinMode" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 77


État 23

  112 ATmega328p_procedure: "digitalWrite" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 78


État 24

  113 ATmega328p_procedure: "analogReference" • '(' expression ')' ';'

    '('  décalage et aller à l'état 79


État 25

  114 ATmega328p_procedure: "analogWrite" • '(' expression ',' expression ')' ';'

    '('  décalage et aller à l'état 80


État 26

  115 ATmega328p_procedure: "peek" • '(' ')' ';'

    '('  décalage et aller à l'état 81


État 27

  116 ATmega328p_procedure: "flush" • '(' ')' ';'

    '('  décalage et aller à l'état 82


État 28

  117 ATmega328p_procedure: "putc" • '(' expression ')' ';'

    '('  décalage et aller à l'état 83


État 29

  118 ATmega328p_procedure: "puts" • '(' expression ')' ';'

    '('  décalage et aller à l'état 84


État 30

  120 ATmega328p_procedure: "delay_ms" • '(' expression ')' ';'

    '('  décalage et aller à l'état 85


État 31

  119 ATmega328p_procedure: "delay_s" • '(' expression ')' ';'

    '('  décalage et aller à l'état 86


État 32

   68 left_part: IDENTIFIER •
   69          | IDENTIFIER • '[' expression ']'

    '['  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 68 (left_part)


État 33

    4 list_of_stms: • stm
    5             | • list_of_stms stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   64    | '{' • list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  111 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  112                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  113                     | • "analogReference" '(' expression ')' ';'
  114                     | • "analogWrite" '(' expression ',' expression ')' ';'
  115                     | • "peek" '(' ')' ';'
  116                     | • "flush" '(' ')' ';'
  117                     | • "putc" '(' expression ')' ';'
  118                     | • "puts" '(' expression ')' ';'
  119                     | • "delay_s" '(' expression ')' ';'
  120                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "pinMode"          décalage et aller à l'état 22
    "digitalWrite"     décalage et aller à l'état 23
    "analogReference"  décalage et aller à l'état 24
    "analogWrite"      décalage et aller à l'état 25
    "peek"             décalage et aller à l'état 26
    "flush"            décalage et aller à l'état 27
    "putc"             décalage et aller à l'état 28
    "puts"             décalage et aller à l'état 29
    "delay_ms"         décalage et aller à l'état 30
    "delay_s"          décalage et aller à l'état 31
    IDENTIFIER         décalage et aller à l'état 32
    '{'                décalage et aller à l'état 33

    list_of_stms          aller à l'état 88
    stm                   aller à l'état 35
    left_part             aller à l'état 36
    ATmega328p_procedure  aller à l'état 37


État 34

    1 program: list_of_definitions "begin" list_of_stms • "end"
    5 list_of_stms: list_of_stms • stm
   45 stm: • left_part "++" ';'
   46    | • left_part "--" ';'
   47    | • left_part '=' expression ';'
   48    | • left_part "+=" expression ';'
   49    | • left_part "-=" expression ';'
   50    | • left_part "*=" expression ';'
   51    | • left_part "/=" expression ';'
   52    | • left_part "%=" expression ';'
   53    | • left_part "&=" expression ';'
   54    | • left_part "|=" expression ';'
   55    | • left_part "&&=" expression ';'
   56    | • left_part "||=" expression ';'
   57    | • ATmega328p_procedure
   58    | • "switch" '(' expression ')' '{' list_of_case_stms '}'
   59    | • "do" stm "while" '(' expression ')' ';'
   60    | • "loop" stm
   61    | • "break" ';'
   62    | • "continue" ';'
   63    | • "return" expression ';'
   64    | • '{' list_of_stms '}'
   68 left_part: • IDENTIFIER
   69          | • IDENTIFIER '[' expression ']'
  111 ATmega328p_procedure: • "pinMode" '(' expression ',' expression ')' ';'
  112                     | • "digitalWrite" '(' expression ',' expression ')' ';'
  113                     | • "analogReference" '(' expression ')' ';'
  114                     | • "analogWrite" '(' expression ',' expression ')' ';'
  115                     | • "peek" '(' ')' ';'
  116                     | • "flush" '(' ')' ';'
  117                     | • "putc" '(' expression ')' ';'
  118                     | • "puts" '(' expression ')' ';'
  119                     | • "delay_s" '(' expression ')' ';'
  120                     | • "delay_ms" '(' expression ')' ';'

    "break"            décalage et aller à l'état 16
    "continue"         décalage et aller à l'état 17
    "do"               décalage et aller à l'état 18
    "end"              décalage et aller à l'état 89
    "loop"             décalage et aller à l'état 19
    "return"           décalage et aller à l'état 20
    "switch"           décalage et aller à l'état 21
    "pinMode"          décalage et aller à l'état 22
    "digitalWrite"     décalage et aller à l'état 23
    "analogReference"  décalage et aller à l'état 24
    "analogWrite"      décalage et aller à l'état 25
    "peek"             décalage et aller à l'état 26
    "flush"            décalage et aller à l'état 27
    "putc"             décalage et aller à l'état 28
    "puts"             décalage et aller à l'état 29
    "delay_ms"         décalage et aller à l'état 30
    "delay_s"          décalage et aller à l'état 31
    IDENTIFIER         décalage et aller à l'état 32
    '{'                décalage et aller à l'état 33

    stm                   aller à l'état 90
    left_part             aller à l'état 36
    ATmega328p_procedure  aller à l'état 37


État 35

    4 list_of_stms: stm •

    $défaut  réduction par utilisation de la règle 4 (list_of_stms)


État 36

   45 stm: left_part • "++" ';'
   46    | left_part • "--" ';'
   47    | left_part • '=' expression ';'
   48    | left_part • "+=" expression ';'
   49    | left_part • "-=" expression ';'
   50    | left_part • "*=" expression ';'
   51    | left_part • "/=" expression ';'
   52    | left_part • "%=" expression ';'
   53    | left_part • "&=" expression ';'
   54    | left_part • "|=" expression ';'
   55    | left_part • "&&=" expression ';'
   56    | left_part • "||=" expression ';'

    "+="   décalage et aller à l'état 91
    "-="   décalage et aller à l'état 92
    "*="   décalage et aller à l'état 93
    "/="   décalage et aller à l'état 94
    "%="   décalage et aller à l'état 95
    "&="   décalage et aller à l'état 96
    "|="   décalage et aller à l'état 97
    "&&="  décalage et aller à l'état 98
    "||="  décalage et aller à l'état 99
    "++"   décalage et aller à l'état 100
    "--"   décalage et aller à l'état 101
    '='    décalage et aller à l'état 102


État 37

   57 stm: ATmega328p_procedure •

    $défaut  réduction par utilisation de la règle 57 (stm)


État 38
